--- a/MoexIntegration.Infrastructure/MoexIntegration.Infrastructure.csproj
+++ b/MoexIntegration.Infrastructure/MoexIntegration.Infrastructure.csproj
@@ -1,13 +1,10 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-
+﻿<Project Sdk="Microsoft.NET.Sdk;Microsoft.NET.Sdk.Publish">
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\MoexIntegration.Core\MoexIntegration.Core.csproj" />
   </ItemGroup>
-
 </Project>
