Логика считывания списка всех акций, торгуемых на MOEX

--- a/MoexIntegration.API/Properties/launchSettings.json
+++ b/MoexIntegration.API/Properties/launchSettings.json
@@ -16,6 +16,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
+      "launchUrl": "getstockdata/SBER",
       "applicationUrl": "https://localhost:7056;http://localhost:5081"
     },
     "IIS Express": {
