--- a/MoexIntegration.Infrastructure/MoexIntegration.Infrastructure.csproj
+++ b/MoexIntegration.Infrastructure/MoexIntegration.Infrastructure.csproj
@@ -5,6 +5,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.9" />
+    <PackageReference Include="StackExchange.Redis" Version="2.9.25" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\MoexIntegration.Core\MoexIntegration.Core.csproj" />
   </ItemGroup>
 </Project>
