--- a/MoexIntegration.API/Properties/launchSettings.json
+++ b/MoexIntegration.API/Properties/launchSettings.json
@@ -16,7 +16,8 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "launchUrl": "getstockdata/SBER",
+      //"launchUrl": "getstockdata/SBER",
+      //"launchUrl": "getsecurities",
       "applicationUrl": "https://localhost:7056;http://localhost:5081"
     },
     "IIS Express": {
